refactor: add hero and work sections and placeholder review section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.autoSave": "onFocusChange",
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": { "source.organizeImports": true },
-  "prettier.documentSelectors": ["**/*.svg"]
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
+  },
+  "prettier.documentSelectors": ["**/*.svg"],
+  "liveServer.settings.port": 5501
 }
