--- a/package.json
+++ b/package.json
@@ -7,22 +7,17 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
-    "astro": "^3.5.6",
+    "astro": "^4.0.3",
+    "astro-icon": "^0.8.1",
+    "gsap": "^3.12.2",
+    "split-type": "^0.3.4",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-astro": "^0.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "@astrojs/tailwind": "^5.0.2",
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
