--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@vercel/speed-insights": "^1.0.9",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.1",
     "gsap": "^3.12.2",
