--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/sitemap": "^3.0.5",
     "@vercel/speed-insights": "^1.0.9",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.1",
+    "astro-meta-tags": "^0.2.1",
     "gsap": "^3.12.2",
     "split-type": "^0.3.4",
     "typescript": "^5.3.2"
