--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/sitemap": "^3.0.5",
+    "@sanity/astro": "^2.2.1",
+    "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
     "@vercel/speed-insights": "^1.0.9",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.1",
     "astro-meta-tags": "^0.2.1",
+    "astro-portabletext": "^0.9.6",
     "gsap": "^3.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "*",
     "split-type": "^0.3.4",
     "typescript": "^5.3.2"
   },
