--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/partytown": "^2.0.4",
+    "@astrojs/prism": "^3.0.0",
+    "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
     "@sanity/astro": "^2.2.1",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@vercel/speed-insights": "^1.0.9",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.1",
@@ -34,9 +37,11 @@
     "@commitlint/config-conventional": "^18.4.2",
     "editorconfig-checker": "^5.1.2",
     "lefthook": "^1.5.2",
+    "lit": "^3.1.2",
     "prettier": "^3.1.0",
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vite": "^5.1.4"
   }
 }
