--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/partytown": "^2.0.4",
-    "@astrojs/prism": "^3.0.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
     "@sanity/astro": "^2.2.1",
@@ -24,6 +23,7 @@
     "astro-icon": "^0.8.1",
     "astro-meta-tags": "^0.2.1",
     "astro-portabletext": "^0.9.6",
+    "astro-seo": "^0.8.2",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
