--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
+    "build:lint": "astro check && astro build && yarn eslint 'src/**/*.{js,astro}'",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -14,6 +15,7 @@
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
+    "@fontsource/outfit": "^5.0.8",
     "@sanity/astro": "^2.2.1",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
@@ -35,11 +37,16 @@
     "@astrojs/tailwind": "^5.0.2",
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "editorconfig-checker": "^5.1.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "lefthook": "^1.5.2",
     "lit": "^3.1.2",
     "prettier": "^3.1.0",
-    "prettier-plugin-astro": "^0.12.2",
+    "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.0.24",
     "vite": "^5.1.4"
