refactor: update social links, fix(css): mobile responsiveness

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.0.24",
+    "type-fest": "^4.10.3",
     "vite": "^5.1.4"
   }
 }
