feat: update project structure and add global styles, refactor components

--- a/package.json
+++ b/package.json
@@ -1,57 +1,52 @@
 {
-  "name": "coding-with-raj",
+  "name": "new-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "build:lint": "astro check && astro build && yarn eslint 'src/**/*.{js,astro}'",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/partytown": "^2.0.4",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.0.5",
-    "@fontsource/outfit": "^5.0.8",
-    "@sanity/astro": "^2.2.1",
-    "@sanity/client": "^6.4.12",
-    "@sanity/image-url": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.10",
-    "@vercel/speed-insights": "^1.0.9",
-    "astro": "^4.0.3",
-    "astro-icon": "^0.8.1",
-    "astro-meta-tags": "^0.2.1",
-    "astro-portabletext": "^0.9.6",
-    "astro-seo": "^0.8.2",
-    "astro-seo-schema": "^4.0.0",
-    "gsap": "^3.12.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanity": "*",
+    "@astrojs/partytown": "^2.1.3",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "@fontsource/outfit": "^5.1.1",
+    "@iconify-json/tabler": "^1.2.15",
+    "@sanity/astro": "^3.1.11",
+    "@sanity/client": "^6.27.2",
+    "@sanity/visual-editing": "^2.12.14",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.0.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vercel/speed-insights": "^1.1.0",
+    "astro": "^5.2.5",
+    "astro-icon": "^1.1.5",
+    "astro-meta-tags": "^0.3.1",
+    "astro-portabletext": "^0.11.0",
+    "astro-seo": "^0.8.4",
+    "astro-seo-schema": "^5.0.0",
+    "gsap": "^3.12.7",
+    "lucide-react": "^0.474.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
+    "sanity": "^3.74.1",
     "schema-dts": "^1.1.2",
     "split-type": "^0.3.4",
-    "typescript": "^5.3.2"
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.0.2",
-    "@commitlint/cli": "^18.4.2",
-    "@commitlint/config-conventional": "^18.4.2",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "editorconfig-checker": "^5.1.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.31.4",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "lefthook": "^1.5.2",
-    "lit": "^3.1.2",
-    "prettier": "^3.1.0",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.0.24",
-    "type-fest": "^4.10.3",
-    "vite": "^5.1.4"
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@iconify-json/mdi": "^1.2.3",
+    "editorconfig-checker": "^6.0.1",
+    "lefthook": "^1.10.10",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
