--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
     "@astrojs/partytown": "^2.1.3",
     "@astrojs/react": "^4.2.0",
