feat: update Node.js engine version, refactor styles and animations in components

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,7 @@
 commit-msg:
-  commands:
-    lint-commit-msg:
-      run: yarn commitlint --edit
+  # commands:
+  #   lint-commit-msg:
+  #     run: yarn commitlint --edit
 
 pre-commit:
   parallel: true
