--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "astro": "^5.2.5",
     "astro-icon": "^1.1.5",
