feat: add reading time estimation helper, update services and hero sections, enhance blog feed with sanitized content

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@fontsource/outfit": "^5.1.1",
     "@iconify-json/tabler": "^1.2.15",
+    "@portabletext/toolkit": "^2.0.17",
     "@sanity/astro": "^3.1.11",
     "@sanity/client": "^6.27.2",
     "@sanity/visual-editing": "^2.12.14",
@@ -38,6 +39,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
+    "reading-time": "^1.5.0",
+    "sanitize-html": "^2.14.0",
     "sanity": "^3.74.1",
     "schema-dts": "^1.1.2",
     "split-type": "^0.3.4",
@@ -47,6 +50,7 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@iconify-json/mdi": "^1.2.3",
+    "@types/sanitize-html": "^2.13.0",
     "editorconfig-checker": "^6.0.1",
     "lefthook": "^1.10.10",
     "prettier": "^3.4.2",
