--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^8.0.6",
     "@fontsource/outfit": "^5.1.1",
     "@iconify-json/tabler": "^1.2.15",
     "@portabletext/toolkit": "^2.0.17",
