--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@portabletext/react": "^3.2.1",
     "@portabletext/toolkit": "^2.0.17",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -32,6 +33,7 @@
     "@sanity/image-url": "1",
     "@sanity/orderable-document-list": "^1.2.3",
     "@sanity/preview-url-secret": "^2.1.5",
+    "@sanity/ui": "^2.15.4",
     "@sanity/vision": "3",
     "@tanstack/react-query": "^5.67.2",
     "@vercel/analytics": "^1.5.0",
@@ -52,6 +54,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-player": "^2.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "reading-time": "^1.5.0",
     "sanity": "3",
