--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@portabletext/react": "^3.2.1",
     "@portabletext/toolkit": "^2.0.17",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
