--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "next": "15.2.1",
     "next-sanity": "9",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.236.2",
+    "posthog-node": "^4.12.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
