--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "reading-time": "^1.5.0",
     "sanity": "3",
+    "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
     "split-type": "^0.3.4",
     "stripe": "^17.7.0",
