--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-email/components": "0.0.36",
     "@sanity/client": "^6.28.3",
     "@sanity/code-input": "^5.1.2",
     "@sanity/icons": "^3.7.0",
@@ -36,7 +37,9 @@
     "@sanity/preview-url-secret": "^2.1.5",
     "@sanity/ui": "^2.15.4",
     "@sanity/vision": "3",
-    "@tanstack/react-query": "^5.67.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.74.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.2",
@@ -60,6 +63,7 @@
     "react-player": "^2.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "reading-time": "^1.5.0",
+    "resend": "^4.4.1",
     "sanity": "3",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
