--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -47,8 +48,10 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.7",
+    "jimp": "^1.6.0",
     "lucide-react": "^0.479.0",
     "nanoid": "^5.1.3",
     "next": "15.2.1",
@@ -66,12 +69,14 @@
     "resend": "^4.4.1",
     "sanity": "3",
     "schema-dts": "^1.1.5",
+    "sharp": "^0.34.1",
     "sonner": "^2.0.1",
     "split-type": "^0.3.4",
     "stripe": "^17.7.0",
     "styled-components": "6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
@@ -79,6 +84,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
