--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/chrome": "^0.0.323",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
