--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@clerk/nextjs": "^6.12.4",
     "@fontsource/outfit": "^5.2.5",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@portabletext/react": "^3.2.1",
     "@portabletext/toolkit": "^2.0.17",
@@ -28,6 +29,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.0.36",
     "@sanity/client": "^6.28.3",
     "@sanity/code-input": "^5.1.2",
@@ -50,12 +52,14 @@
     "framer-motion": "^12.4.10",
     "gsap": "^3.13.0",
     "lucide-react": "^0.479.0",
+    "motion": "^12.23.26",
     "nanoid": "^5.1.3",
     "next": "15.2.1",
     "next-sanity": "9",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.236.2",
     "posthog-node": "^4.12.0",
+    "prettier": "^3.7.4",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -64,6 +68,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "reading-time": "^1.5.0",
     "resend": "^4.4.1",
+    "rough-notation": "^0.5.1",
     "sanity": "3",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
