--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "next-themes": "^0.4.4",
     "posthog-js": "^1.236.2",
     "posthog-node": "^4.12.0",
-    "prettier": "^3.7.4",
+    "prettier": "3.5.3",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -93,5 +93,9 @@
     "eslint-config-next": "15.5.9",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=24.0.0 <25.0.0",
+    "pnpm": ">=8.0.0"
   }
 }
