--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.0.36",
-    "@sanity/client": "^6.28.3",
+    "@sanity/client": "^6.29.1",
     "@sanity/code-input": "^5.1.2",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "1",
     "@sanity/orderable-document-list": "^1.2.3",
-    "@sanity/preview-url-secret": "^2.1.5",
+    "@sanity/preview-url-secret": "^2.1.4",
     "@sanity/ui": "^2.15.4",
-    "@sanity/vision": "3",
+    "@sanity/vision": "^3.78.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.74.7",
@@ -69,7 +69,7 @@
     "reading-time": "^1.5.0",
     "resend": "^4.4.1",
     "rough-notation": "^0.5.1",
-    "sanity": "3",
+    "sanity": "^3.78.1",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
     "split-type": "^0.3.4",
@@ -97,5 +97,10 @@
   "engines": {
     "node": ">=24.0.0 <25.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@sanity/preview-url-secret": "2.1.5"
+    }
   }
 }
